# agent_maker

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
agent_maker/: __init__.py  cli.py  scaffold.py  spec.py
agent_maker/core/: __init__.py  agent.py  config.py  llm.py  runner.py  state.py  tools.py
agents/demo_agent/: agent.json  main.py
tests/: test_state.py  test_tools.py
